2006-01-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_get_current_event):
	* lib/ephy-gui.h:

	Add a convenience function to get current event data.

	* src/ephy-link.c: (ephy_link_open),
	(ephy_link_flags_from_current_event):
	* src/ephy-link.h:

	Add a convenience function to translate the current event
	into EphyLinkFlags.

	* src/ephy-go-action.c: (ephy_go_action_get_type):
	* src/ephy-go-action.h:

	Make this an EphyLinkAction.

	* lib/widgets/ephy-location-entry.c: (entry_key_press_cb):
	* src/ephy-home-action.c: (ephy_home_action_activate):
	* src/ephy-location-action.c: (entry_activate_cb):
	* src/ephy-tab.c: (open_link_in_new),
	(ephy_tab_dom_mouse_click_cb):
	* src/window-commands.c: (window_cmd_load_location):

	Fix link activation to respect ctrl and shift modifiers.
	Part of bug #310814.

2006-01-29  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:

	If GetPassword failed, break instead of continue.
	That way we don't endlessly re-ask for the master password.

2006-01-29  Crispin Flowerday  <gnome@flowerday.cx>

	* embed/ephy-embed-single.c: (ephy_embed_single_get_backend_name):
	* embed/ephy-embed-single.h:
	* embed/mozilla/mozilla-embed-single.cpp:
	* src/epiphany.defs:

	Add a function (ephy_embed_single_get_backend_name) to get
	the backend that epiphany is using.

2006-01-29  Reinout van Schouwen <reinout@cs.vu.nl>

	* NEWS
	
	Update NEWS for 1.9.6

2006-01-29  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	* src/bookmarks/ephy-bookmarks.c
	* src/bookmarks/ephy-bookmarks.h
	
	Added better widget to handle duplicate bookmarks.
	
	* src/bookmarks/ephy-topics-entry.c
	
	Corrected handling of UTF8 strings.
	
	* src/bookmarks/ephy-topics-palette.c
	
	Removed unnecessary use of g_idle_*..

2006-01-29  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-file-helpers.c:
	* src/ephy-main.c:

	Fix strings again. Bug #328747.
