@@ -1,3 +1,9 @@
+2006-01-30  Peter Harvey  <peter.a.harvey@gmail.com>
+
+	* src/bookmarks/ephy-bookmark-properties.c
+	
+	Add "Show" text to the items in the "Similar" menu.
+
 2006-01-29  Christian Persch  <chpe@cvs.gnome.org>
 
 	* lib/ephy-gui.c: (ephy_gui_get_current_event):
